[project]
name = "clanky-funker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytelegrambotapi",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "spacy",
    "transformers",
    "sqlalchemy",
    "apscheduler",
    "rich",
    "python-dotenv"
]
